# beehive

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
deploy/: README.md
deploy/quadlet/: beehive-auction-reminders.container  beehive-auction-reminders.timer  beehive-data.volume  beehive-deep-read.container  beehive-deep-read.path  beehive-deep-read.timer  beehive-digest.container  beehive-digest.timer  beehive-fetch-manual.container  beehive-fetch-manual.path  beehive-fetch.container  beehive-fetch.timer  beehive-research-reconcile.container  beehive-research-reconcile.timer  beehive-research.container  beehive-web.container
docs/adr/: 0001-vote-feedback-as-fewshot-prompt-context.md  0002-per-source-per-channel-failure-isolation.md  0003-public-read-surfaces-password-only-admin.md  0004-sqlite-not-duckdb.md  0005-vote-writes-require-owner-session.md  0006-separate-research-data-model.md  0007-application-controlled-research-tools.md  0008-research-sessions-are-owner-only.md  0009-durable-research-worker.md  0010-durably-stage-research-evidence.md
scripts/: run_collector.py  run_research_worker.py  run_web.py  set_admin_password.py
src/beehive/: auction.py  auction_reminders.py  email_routing.py  featured.py  localization.py  notify.py  scheduling.py  tracker_reminders.py
tests/: test_email_routing.py  test_featured.py  test_localization.py  test_notify.py  test_scheduling.py
tests/ai/: test_comment_summarizer.py  test_llm_client.py  test_model_selection.py  test_prompt_builder.py  (+3 more)
(+249 files in other folders)
